leptos-fluent-macros/tests/ui/leptos_fluent/fail/invalid_parameter.rs
use fluent_templates::static_loader;
use leptos::prelude::*;
use leptos_fluent_macros::leptos_fluent;

static_loader! {
    pub static TRANSLATIONS = {
        locales: "../../../../examples/csr-minimal/locales",
        fallback_language: "en",
    };
}

#[component]
pub fn App() -> impl IntoView {
    leptos_fluent! {
        translations: [TRANSLATIONS],
        locales: "../../../../examples/csr-minimal/locales",
        invalid_parameter: "foo",
    };

    view! { <p>Foo</p> }
}

fn main() {}
