leptos-fluent-macros/tests/ui/leptos_fluent/fail/invalid_parameter.stderr
error: Invalid parameter 'invalid_parameter' for leptos_fluent! macro.
  --> tests/ui/leptos_fluent/fail/invalid_parameter.rs:18:9
   |
18 |         invalid_parameter: "foo",
   |         ^^^^^^^^^^^^^^^^^
